# GLite

./: README.md  pyproject.toml
glite/: __init__.py  evaluator.py  glite.py  glite_ast.py  parser.py  tokenizer.py
glite.egg-info/: PKG-INFO  SOURCES.txt
glite/db/: __init__.py  conn.py  glite_database.py
tests/: test_parser.py
